✨添加了一列显示证书绑定的域名，设置未勾选fid时隐藏fid列 ⚡️优化了error.log的输出 ⚡️优化了窗口缩小时的显示 ⚡️优化了搜索按钮的显示，避免在搜索结果未出现时多次点击搜索按钮导致出现两个相同tab页 📝将jdk16导出excel的修复方式更新到md中